--- a/mma5/schedule/templates/schedule/profile.html
+++ b/mma5/schedule/templates/schedule/profile.html
@@ -7,7 +7,7 @@
 	{% if user.is_authenticated %}
 
 
-	<title>Profile  - {{ user.get_full_name }}</title>
+	<title>Profile - {{ user.get_full_name }}</title>
 
 
 	{% else %}
@@ -41,7 +41,8 @@
 	{% if user.is_authenticated %}
 
 	<a class="button button1" href="{% url 'index' %}">Schedule</a>
-	<a class="button button1" href="{% url 'profile' %}">Profile</a>
+	<a class="button button1" href="{% url 'profile' %}"><strong>Profile</strong></a>
+	<a class="button button1" href="{% url 'feedback' %}">Feedback</a>
 	<a class="button button1" href="{% url 'logout' %}">Logout</a>
 
 	{% else %}
