--- a/mma5/schedule/templates/schedule/feedback.html
+++ b/mma5/schedule/templates/schedule/feedback.html
@@ -65,29 +65,40 @@
 
 	{% for obj in lessons %}
 		{% if obj.lesson_student_id == user.id or obj.lesson_teacher_id == user.id %}
+		<h2>Please leave your comment for the following lesson, as detailed below.</h2>
+		<br><br /> 
 			<p>Time: {{obj.lesson_time}}</p>
 			<p>Duration: {{obj.lesson_duration}} minutes</p>
 			<p>Location: Room {{obj.lesson_location}}</p>
 			<p>Teacher: {{obj.lesson_teacher.get_full_name}}</p>
+			<p>Teacher ID: {{obj.lesson_teacher_id}}</p>
 			<p>Student: {{obj.lesson_student.get_full_name}}</p>
+			<p>Student ID: {{obj.lesson_student_id}}</p>
 			<br>
+			<br><br /> 
+
+		<form method="post" action="" method="post">
+			{% csrf_token %}
+			<table>
+				{{ form }}
+			</table>
+			<input type="submit" value="Add Comment">
+		</form>
+
+		<!-- Draft Form -->
+		<!-- ## <label>Student ID: {{obj.lesson_student_id}}</label>
+			<input type="number" name="lesson_student_id" />
+			<br />
+			<label>Teacher ID: {{obj.lesson_teacher_id}}</label>
+			<input type="number" name="lesson_teacher_id" />
+			<br />
+			<label>Comment: </label>
+			<input type="text" name="lesson_comment" /> ## -->
+
 		{% endif %}
 
 	{% endfor %}
 
-	<form method="post" action="/submit_to_db.php" method="post">
-		<label>Student ID</label>
-		<input type="number" name="lesson_student_id" />
-		<br />
-		<label>Teacher ID</label>
-		<input type="number" name="lesson_teacher_id" />
-		<br />
-		<label>Comment</label>
-		<input type="text" name="lesson_comment" />
-		 
-		<br />
-		<input type="submit" value="Add Comment">
-	</form>
 
 	{% else %}
 
