--- a/mma5/schedule/templates/schedule/profile.html
+++ b/mma5/schedule/templates/schedule/profile.html
@@ -1,4 +1,5 @@
 {% extends "general_template.html" %}
+{% load static %}
 
 <!-- PAGE TITLE ################################# -->
 
@@ -7,7 +8,7 @@
 	{% if user.is_authenticated %}
 
 
-	<title>Profile  - {{ user.get_full_name }}</title>
+	<title>Profile - {{ user.get_full_name }}</title>
 
 
 	{% else %}
@@ -15,7 +16,7 @@
 
 	<title>Mika's Music Academy</title>
 
-        
+
 	{% endif %}
 
 {% endblock %}
@@ -25,11 +26,21 @@
 {% block body_header %}
 
 	{% if user.is_authenticated %}
+	<div id="logo_container">
+
+	<img id= "logo" src="{% static 'images/logo.png' %}">
 
 
+	</div>
+    <p class="welcome">Welcome, {{ user.get_full_name }}.</p>
 	{% else %}
+	<div id="logo_container">
 
-        
+	<img id= "logo" src="{% static 'images/logo.png' %}">
+
+	</div>
+
+
 	{% endif %}
 
 {% endblock %}
@@ -40,13 +51,16 @@
 
 	{% if user.is_authenticated %}
 
-	<a class="button button1" href="{% url 'index' %}">Schedule</a>
-	<a class="button button1" href="{% url 'profile' %}">Profile</a>
-	<a class="button button1" href="{% url 'logout' %}">Logout</a>
+	<a class="navbutton" href="{% url 'index' %}">Schedule</a>
+	<a class="navbutton" href="{% url 'profile' %}">Profile</a>
+	<a class="navbutton" href="{% url 'instrument' %}">Book Instrument</a>
+
+
+	<a class="navbutton" href="{% url 'logout' %}">Logout</a>
 
 	{% else %}
 
-        
+
 	{% endif %}
 
 {% endblock %}
@@ -56,24 +70,51 @@
 {% block content %}
 
 	{% if user.is_authenticated %}
+    <div id="page-title">
+	    <h2>Profile</h2>
+    </div>
+        <div class="profile-module">
+            <div class="profile-piece">
+			<p class="lesson-title">Username</p>
+			<p class="lesson-text">{{ user.get_username }}</p>
+			</div>
+			<div class="profile-piece">
+			<p class="lesson-title">Name</p>
+			<p class="lesson-text">{{ user.get_full_name }}</p>
+			</div>
+			<div class="profile-piece">
+			<p class="lesson-title">Email</p>
+			<p class="lesson-text">{{ user.email }}</p>
+			</div>
+			<div class="profile-piece">
+			<p class="lesson-title">Phone</p>
+			<p class="lesson-text">{{ user.mobile_number }}</p>
+			</div>
+			<div class="profile-piece">
+			<p class="lesson-title">Address</p>
+			<p class="lesson-text">{{ user.street_number }} {{ user.street_name }}, {{ user.suburb }}, {{ user.state }}, {{ user.post_code }}</p>
+			</div>
+			<div class="profile-piece">
+			<p class="lesson-title">Guardian Name</p>
+			<p class="lesson-text">{{ user.guardian_first_name }}</p>
+			</div>
+			<div class="profile-piece">
+			<p class="lesson-title">Guardian Email</p>
+			<p class="lesson-text">{{ user.guardian_email }}</p>
+			</div>
+			<div class="profile-piece">
+			<p class="lesson-title">Guardian Phone</p>
+			<p class="lesson-text">{{ user.guardian_mobile_number }}</p>
+			</div>
 
-	<p>Username: {{ user.get_username }}</p>
-	<p>Name: {{ user.get_full_name }}</p>
-	<p>Email: {{ user.email }}</p>
-	<p>Phone: {{ user.mobile_number }}</p>
-	<p>Address: {{ user.street_number }} {{ user.street_name }}, {{ user.suburb }}, {{ user.state }}, {{ user.post_code }}</p>
+        </div>
 
-	
-	<p>Guardian Name: {{ user.guardian_first_name }} {{ user.guardian_last_name }}</p>
-	<p>Guardian Phone: {{ user.guardian_mobile_number }}</p>
-	<p>Guardian Email: {{ user.guardian_email }}</p>
-	
 
 	{% else %}
 
 	<a class="button button1" href="{% url 'login' %}">Login</a>
 	<a class="button button1" href="{% url 'register' %}">Register</a>
-        
+
 {% endif %}
 
 {% endblock %}
